# ChangeLog for media-sound/esound
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/Attic/ChangeLog,v 1.20 2003/06/10 17:23:09 taviso Exp $

  10 Jun 2003; Tavis Ormandy <taviso@gentoo.org> esound-0.2.29-r1.ebuild:
  make sure esdlib linked applications obey $ESPEAKER, even if a local
  esd is present. (bug #18000)

  changed epatch commands to use ${P}.

  changing minimum required alsa-lib version to 5.10b, to make repoman 
  happy.

*esound-0.2.29-r1 (30 May 2003)

  31 May 2003; Stanislav Brabec <utx@gentoo.org> esound-0.2.29-r1.ebuild,
  files/esound.conf.d, files/esound.init.d:
  Masked for testing. Added warning about client setup to global daemon config
  files.

  30 May 2003; Stanislav Brabec <utx@gentoo.org> esound-0.2.29-r1.ebuild,
  files/esound-0.2.29-alsa-period.diff, files/esound.conf.d,
  files/esound.init.d:
  Added init scripts for remote sound access. Fixed ALSA maximum periods (CVS
  fix from Takashi Iwai <tiwai@suse.de>).

*esound-0.2.29 (06 Sep 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

  17 Sep 2002; Spider <spider@gentoo.org> esound-0.2.29.ebuild :
  added ppc keyword 
  
  16 Sep 2002; Maarten Thibaut <murphy@gentoo.org> esound-0.2.29.ebuild, ChangeLog :
  Adding sparc/sparc64 keywords. Revamping ChangeLog layout.

  06 Sep 2002; Spider <spider@gentoo.org> esound-0.2.29.ebuild : New version
  
*esound-0.2.28-r1 (28 Jun 2002)

  28 Jun 2002; Seemant Kulleen <seemant@gentoo.org> esound-0.2.28-r1.ebuild,
  files/digest-esound-0.2.28-r1 : LFH/man page fixes and elibtoolize

*esound-0.2.28 (19 Jun 2002)

  19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> : New version.

*esound-0.2.27 (07 Jun 2002)

  07 Jun 2002; Martin Schlemmer <azarah@gentoo.org> : Bump version.

*esound-0.2.26 (07 May 2002)

  07 May 2002; Spider <spider@gentoo.org> esound-0.2.26.ebuild : Latest version.

*esound-0.2.25 (24 Apr 2002)
