@@ -1,3 +1,7 @@
+MD5 c5ccb9cebdaf399112bbcccf07edf944 ChangeLog 3037
+MD5 4e339d6251bb07f18662f7f2e3b897ef esound-0.2.28-r1.ebuild 1218
+MD5 ca872a36e05574879369a9d175047624 esound-0.2.29-r1.ebuild 1763
+MD5 56442e37cd0fdfed6cb8454d6a96ec19 esound-0.2.29.ebuild 1120
 MD5 ff77029d87c0470ecc3ce2b013f84fa6 files/digest-esound-0.2.28-r1 66
 MD5 249e1fd14f662bce76093bb7685f7eb2 files/digest-esound-0.2.29 66
 MD5 249e1fd14f662bce76093bb7685f7eb2 files/digest-esound-0.2.29-r1 66
@@ -5,7 +9,3 @@ MD5 340b8af9191cda014c7963617ede9b77 files/esound-0.2.29-alsa-period.diff 473
 MD5 75aca7b483f56968b69b28ce2fa2389e files/esound-0.2.29-local-vs-remote.diff 474
 MD5 6a04ae174ae4b2bb4ad9734fe09d32e2 files/esound.conf.d 737
 MD5 4dd6862d8962854acaaffa754e7815b4 files/esound.init.d 898
-MD5 4e339d6251bb07f18662f7f2e3b897ef esound-0.2.28-r1.ebuild 1218
-MD5 e646914be2313bb03771dafa3378cd57 esound-0.2.29.ebuild 1115
-MD5 a75803453e058e029a0af37ef403680c ChangeLog 2842
-MD5 8ee856c6f78ed2c20872786aa9b2b6aa esound-0.2.29-r1.ebuild 1757
