@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/Attic/esound-0.2.29-r1.ebuild,v 1.4 2003/06/10 17:23:09 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/Attic/esound-0.2.29-r1.ebuild,v 1.5 2003/07/01 20:33:24 gmsoft Exp $
 
 IUSE="tcpd alsa"
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://gnome/2.0.1/sources/${PN}/${P}.tar.bz2"
 HOMEPAGE="http://www.tux.org/~ricdude/EsounD.html"
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~sparc ~ppc ~alpha"
+KEYWORDS="~x86 ~sparc ~ppc ~alpha ~hppa"
 
 DEPEND=" >=media-libs/audiofile-0.1.9
 	alsa? ( >=media-libs/alsa-lib-0.5.10b )
