@@ -1,6 +1,6 @@
 # ChangeLog for media-sound/esound
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/Attic/ChangeLog,v 1.20 2003/06/10 17:23:09 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/Attic/ChangeLog,v 1.21 2003/07/01 20:33:24 gmsoft Exp $
 
   10 Jun 2003; Tavis Ormandy <taviso@gentoo.org> esound-0.2.29-r1.ebuild:
   make sure esdlib linked applications obey $ESPEAKER, even if a local
@@ -12,6 +12,9 @@
   happy.
 
 *esound-0.2.29-r1 (30 May 2003)
+
+  01 Jul 2003; Guy Martin <gmsoft@gentoo.org> esound-0.2.29-r1.ebuild :
+  Added ~hppa to KEYWORDS.
 
   31 May 2003; Stanislav Brabec <utx@gentoo.org> esound-0.2.29-r1.ebuild,
   files/esound.conf.d, files/esound.init.d:
@@ -25,6 +28,9 @@
   fix from Takashi Iwai <tiwai@suse.de>).
 
 *esound-0.2.29 (06 Sep 2002)
+
+  01 Jul 2003; Guy Marin <gmsoft@gentoo.org> esound-0.2.29.ebuild :
+  Added hppa to KEYWORDS.
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
